# src/models/Employee.ts
@@ -18,6 +18,7 @@ export interface IEmployee extends Document {
     interviews: { create: boolean; read: boolean; update: boolean; delete: boolean; };
     assessments: { create: boolean; read: boolean; update: boolean; delete: boolean; };
     employees: { create: boolean; read: boolean; update: boolean; delete: boolean; };
+    workflows: { create: boolean; read: boolean; update: boolean; delete: boolean; };
     reports: { read: boolean; };
     settings: { read: boolean; update: boolean; };
   };
@@ -124,6 +125,12 @@ const EmployeeSchema: Schema = new Schema({
       delete: { type: Boolean, default: false }
     },
     employees: {
+      create: { type: Boolean, default: false },
+      read: { type: Boolean, default: false },
+      update: { type: Boolean, default: false },
+      delete: { type: Boolean, default: false }
+    },
+    workflows: {
       create: { type: Boolean, default: false },
       read: { type: Boolean, default: false },
       update: { type: Boolean, default: false },
